--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -418,7 +418,7 @@
 
 // .brand-carousel-area
 .brand-carousel-area {
-    background-color: #F0F8FF;
+    @extend %lightblue-bg-color;
     padding: 35px 0;
     .single-brand-item{
         @extend %white-bg-color;
@@ -551,7 +551,7 @@
         border: 1px solid #E0EAF2;
         padding: 15px 10px 20px 10px;
         @extend %borderradius5;
-        background-color: #F0F8FF;
+        @extend %lightblue-bg-color;
         @include mx-desktops{
             padding: 15px 15px 20px 15px;
         }
@@ -1004,8 +1004,9 @@
             top: -12px;
             font-family: fontawesome;
             font-size: 40px;
-            color: #3A698E;
+            color: #fff;
             content: "\f10d";
+            opacity: .7;
             @include mx-desktops{
                 left: -56px;
             }
@@ -1019,9 +1020,10 @@
             right: -66px;
             bottom: 0;
             font-family: fontawesome;
-            color: #3A698E;
+            color: #fff;
             font-size: 40px;
             content: "\f10e";
+            opacity: .7;
             @include mx-desktops{
                 right: -45px;
             }
